--- a/src/app/certificates/certificate-list/certificate-list.component.html
+++ b/src/app/certificates/certificate-list/certificate-list.component.html
@@ -103,3 +103,13 @@
         <button mat-raised-button color="basic" (click)="onDownloadModalCancel();">Cancel</button>
     </div>
 </ng-template>
+<ng-template #certifiateTemplate>
+    <div class="modal-header">
+
+    </div>
+    <div class="modal-body">
+        <div class="modal-title pull-left">
+
+        </div>
+    </div>
+</ng-template>
